# shunt

./: CNAME  Cargo.toml  index.html  rust-toolchain.toml  shunt-d0d0b1899c1d278d.js  shunt-d0d0b1899c1d278d_bg.wasm
.github/workflows/: web.yml
src/: main.rs  model.rs
