[package]
edition = "2021"
name = "shunt"
version = "0.1.0"

[dependencies]
chrono = { version = "0.4.35", default-features = false, features = ["clock", "wasmbind"] }
rand = { version = "0.8.5", default-features = false, features = ["std", "small_rng"] }
sha3 = "0.10.8"
yew = {version = "0.21.0", features = ["csr"]}
